refactor(line): 노선의 구간 목록을 일급 콜렉션으로 wrapping한다.